Fix header logo and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
 }
 
 .header {
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 16px;
 }
 
@@ -127,6 +127,7 @@
 .header .title {
     font-size: 24px;
     color: #F9FAF8;
+    font-weight: 700;
 }
 
 .header ul {
